--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li>Login</li>
         <li>Sign Up</li>
     </ul>
-    <h1 class="zomato">Zomato</h1>
+    <img src="images/zomatologo.png" alt="" class="zomato">
     <h2>Discover best foods & drinks in Kochi</h2>
     <div class="search1">
         <img src="images/th.jpg" >
